issue-192: added profiles for enabling/disabling integration test
Add the "it" profile for running the integration tests (which are
disabled by default).